[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metrolink-times"
description = "Track trams on the metrolink network & estimate their due times"
readme = "README.md"
authors = [
    {name = "James Sandford", email = "metrolinktimes@j616s.co.uk"}
]
requires-python = ">=3.12"
license = {file = "license"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "networkx>=3.2",
    "matplotlib>=3.8.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "mangum>=0.17.0",
    "boto3>=1.34.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[project.scripts]
metrolink-times = "metrolinkTimes.__main__:main"

[project.urls]
homepage = "https://github.com/maskerade/metrolinkTimes"
repository = "https://github.com/maskerade/metrolinkTimes"
documentation = "https://github.com/maskerade/metrolinkTimes#readme"
issues = "https://github.com/maskerade/metrolinkTimes/issues"

[tool.hatch.version]
path = "metrolinkTimes/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["metrolinkTimes"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "B904", # raise from within except
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
